--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -47,6 +47,7 @@
 .heroImg {
   border-radius: 50%;
   width: 50%;
+  height: 500px;
   z-index: 1;
   animation-name: floating;
   animation-duration: 3s;
