--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -66,11 +66,59 @@
   font-size: 25px;
 }
 
-@media screen and (max-width: 830px) {
+@media screen and (max-width: 1200px) {
   .container {
-    background-color: transparent;
-    padding-left: 0;
-    padding-right: 0;
+    padding: 50px;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  .title {
+    font-size: 30px;
+  }
+
+  .aboutItem h3, .aboutItem p {
+    font-size: 22px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .container {
+    padding: 40px;
+  }
+
+  .title {
+    font-size: 28px;
+  }
+
+  .aboutItem h3, .aboutItem p {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    padding: 30px;
+  }
+
+  .title {
+    font-size: 25px;
+  }
+
+  .aboutItem h3, .aboutItem p {
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .container {
+    padding: 20px;
+    margin-left: 2%;
+    margin-right: 2%;
+  }
+
+  .title {
+    font-size: 22px;
   }
 
   .content {
@@ -82,11 +130,28 @@
   }
 
   .aboutItems {
-    margin-top: 29px;
+    margin-top: 20px;
   }
 
   .aboutItem {
-    padding-left: 0;
-    padding-right: 0;
+    padding: 15px;
+  }
+
+  .aboutItem h3, .aboutItem p {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .container {
+    padding: 10px;
+  }
+
+  .title {
+    font-size: 20px;
+  }
+
+  .aboutItem h3, .aboutItem p {
+    font-size: 14px;
   }
 }
