--- a/src/components/Contact/Cotact.module.css
+++ b/src/components/Contact/Cotact.module.css
@@ -46,6 +46,20 @@
   letter-spacing: 1.5px;
 }
 
+@media screen and (max-width: 1200px) {
+  .text h2 {
+    font-size: 60px;
+  }
+
+  .text p {
+    font-size: 30px;
+  }
+
+  .link a {
+    font-size: 25px;
+  }
+}
+
 @media screen and (max-width: 830px) {
   .container {
     flex-direction: column;
@@ -60,5 +74,37 @@
 
   .links {
     align-items: center;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .text h2 {
+    font-size: 40px;
+  }
+
+  .text p {
+    font-size: 20px;
+  }
+
+  .link a {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .container {
+    padding: 20px 5%;
+  }
+
+  .text h2 {
+    font-size: 30px;
+  }
+
+  .text p {
+    font-size: 18px;
+  }
+
+  .link a {
+    font-size: 18px;
   }
 }
