--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -46,13 +46,14 @@
 }
 .heroImg {
   border-radius: 50%;
-  width: 50%;
-  height: 500px;
-  z-index: 1;
-  animation-name: floating;
+  width: 100%;
+  height: 300px;
+   z-index: 1;
+   padding-left: 20px ;
+  /*animation-name: floating;
   animation-duration: 3s;
   animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out; */
 }
 @keyframes floating {
   0% {
@@ -69,7 +70,8 @@
   position: absolute;
   width: 50vw;
   height: 50vw;
-  min-width: 350px;
+  /* min-width: 350px; */
+
   min-height: 350px;
   top: -128px;
   left: 10vw;
