--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -50,6 +50,9 @@
   height: 300px;
    z-index: 1;
    padding-left: 20px ;
+   margin-top: -30px;
+   margin-bottom:20px ;
+
   /*animation-name: floating;
   animation-duration: 3s;
   animation-iteration-count: infinite;
